# langfuse-evals-streamlit

./: .cache_interakt_doc.json  .gitignore  app.py  facebook_catalog_integration.py  interface_messages.py  package-lock.json  requirements.txt  streamlit_app.py  test_faq_scorer.py
.streamlit/: sidebar_state.json
data injection/: ingestion_mvp.tsx
evals_generator/: .session_cache.json  README.md  __init__.py  app.py  interface_messages.py
expected_output_generator/: README.md  app.py
indent_discoverer/: .gitignore  README.md  app.py  pyproject.toml
indent_discoverer/.streamlit/: sidebar_state.json
indent_discoverer/src/indent_discoverer/: __init__.py  cli.py  core.py
indent_discoverer/tests/: __init__.py  test_core.py
ingestion-mvp/: index.html  package-lock.json  package.json
ingestion-mvp/src/: index.css
tests/: test_interface_messages.py  test_whatsapp_mapping.py
two_step_eval/: app.py
